// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <select
          class="form-control criterion-input"
        >
          <option
            value="true"
          >
            True
          </option>
          <option
            value="false"
          >
            False
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`BooleanInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Do Not Call
      </div>
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <select
          class="form-control criterion-input"
        >
          <option
            value="true"
          >
            True
          </option>
          <option
            value="false"
          >
            False
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
